samples/_failures_safe/1761040586_f870f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0aafb64.c: In function ‘main’:
./samples/SAFE/__tmp_f0aafb64.c:138:5: error: expected declaration or statement at end of input
  138 |     return 0;
      |     ^~~~~~
